<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cl_main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:padding="10dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <EditText
        android:id="@+id/et_enter_room_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/bg_edittext"
        android:hint="@string/input_room_name_hint" />

    <Button
        android:id="@+id/btn_room_join"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_enter_room_name"
        android:layout_marginTop="5dp"
        android:text="@string/btn_join_room_label"
        android:visibility="invisible" />

    <TextView
        android:id="@+id/tv_rooms_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        android:layout_below="@+id/btn_room_join"
        android:text="@string/tv_rooms_header"/>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/srl_rooms"
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_rooms_header">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_rooms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </android.support.v4.widget.SwipeRefreshLayout>

</RelativeLayout>